--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    haha
+<body style="background-color:aqua">
+    2eme essai
+    <h1>
+        hello world
+    </h1>
 </body>
 </html>
